--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "@chakra-ui/react": "^1.1.2",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
-    "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^10.4.9",
-    "@testing-library/user-event": "^12.6.0",
-    "@types/jest": "^25.2.3",
-    "@types/node": "^12.19.12",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
+    "axios": "^0.21.1",
+    "fp-ts": "^2.9.3",
     "framer-motion": "^3.2.0",
+    "link-module-alias": "^1.2.0",
+    "monocle-ts": "^2.3.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "reselect": "^4.0.0",
     "typescript": "^3.9.7",
     "web-vitals": "^0.2.4"
   },
@@ -25,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "link-module-alias",
+    "preinstall": "command -v link-module-alias && link-module-alias clean || true"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,5 +45,25 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^12.19.12",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "@types/react-redux": "^7.1.15",
+    "@types/react-router-dom": "^5.1.7"
+  },
+  "_moduleAliasIgnoreWarning": true,
+  "_moduleAliases": {
+    "~app": "src/app",
+    "~lib": "src/lib",
+    "~routes": "src/routes",
+    "~store": "src/store",
+    "~styles": "src/styles",
+    "~util": "src/util"
   }
 }
