--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "link-module-alias",
-    "preinstall": "command -v link-module-alias && link-module-alias clean || true"
+    "postinstall": "link-module-alias"
   },
   "eslintConfig": {
     "extends": "react-app"
