--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "link-module-alias": "^1.2.0",
     "monocle-ts": "^2.3.4",
     "react": "^17.0.1",
+    "react-confetti": "^6.0.0",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.2",
